@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-02-27T01:04:06Z",
+  "timestamp" : "2024-02-27T08:17:58Z",
   "count_outdated" : 1599,
   "uniques_outdated" : 875,
-  "count" : 1613,
-  "uniques" : 883,
+  "count" : 1614,
+  "uniques" : 884,
   "clones" : [
     {
       "timestamp": "2024-02-20T00:00:00Z",
@@ -64,6 +64,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
