@@ -1,5 +1,5 @@
 {
-  "count": 14,
+  "count": 15,
   "uniques": 2,
   "clones": [
     {
@@ -35,6 +35,11 @@
     {
       "timestamp": "2024-02-26T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-02-27T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
